# TTS-Augmented-ASR

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  setup_fixed.sh
prompts/: domain.txt  morphological_et.txt  morphological_sl.txt  paraphrase.txt  regeneration.txt  validator.txt
prompts/system/: domain.txt  morphological_et.txt  morphological_sl.txt  paraphrase.txt  regeneration.txt  validator.txt
results/: README.md  normalized_results.xlsx  parakeet-tdt-0.6b-v3_et_cv17_test.json  parakeet-tdt-0.6b-v3_et_cv17_validation.json  parakeet-tdt-0.6b-v3_et_fleurs_test.json  parakeet-tdt-0.6b-v3_sl_cv17_validation.json  parakeet-tdt-cv_only_et-seed42_et_cv17_validation.json  parakeet-tdt-cv_only_et-seed42_et_fleurs_test.json  parakeet-tdt-cv_only_sl-seed42_sl_cv17_test.json  parakeet-tdt-cv_only_sl-seed42_sl_cv17_validation.json  parakeet-tdt-cv_only_sl-seed42_sl_fleurs_test.json  parakeet-tdt-cv_synth_all_et-seed42_et_fleurs_test.json  parakeet-tdt-cv_synth_all_sl-seed42_sl_cv17_validation.json  parakeet-tdt-cv_synth_no_morph_et-seed42_et_cv17_test.json  parakeet-tdt-cv_synth_no_morph_et-seed42_et_fleurs_test.json  significance_results_et.xlsx
scripts/: README.md  download_and_convert.py  hf_post_parakeet.md  push_parakeet_nl.py  push_parakeet_pl.py  push_parakeet_pt.py  setup.sh  train_parakeet.sh  train_whisper.sh  update_readmes.py
scripts/data/: download_whisper_models.py
scripts/docker/: README.md  attach.sh  build.sh  down.sh  logs.sh  shell.sh  train.sh  up.sh
scripts/evaluate/: qwen_pt_zero_shot_baseline.py  (+3 more)
(+76 files in other folders)
